--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <header>
     <!-- start navbar -->
     <nav>
-      <div>
-        <h1><a href="index.html">Victor Olivares</a></h1>
+      <div class="container">
+        <h1 class="logo"><a href="index.html">Victor Olivares</a></h1>
         <ul>
-          <li><a href="index.html">Portafolio</a></li>
+          <li><a class="active" href="index.html">Portafolio</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
       </div>
@@ -31,26 +31,25 @@
   <!-- start main -->
   <main>
     <!-- start section banner -->
-    <section>
-      <article>
-        <div>
-          <h2>Lorem ipsum dolor sit.</h2>
+    <section id="banner">
+      <article id="banner-home">
+        <div class="banner-info">
+          <h2>Bienvenido a nuestra página web.</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ducimus optio soluta alias?
-            Nulla enim esse, tempore laudantium.
+            Hola soy Victor, desarrollador web, especializado en lenguajes de programación Backend y Fronted
           </p>
         </div>
       </article>
     </section>
     <!-- end section banner -->
     <!-- start section about-me -->
-    <section>
-      <article>
-        <div>
+    <section id="about-me">
+      <article class="container">
+        <div class="about-img">
           <img src="/img/about-me.png" alt="" width="250px">
         </div>
-        <div>
-          <h2>Lorem</h2>
+        <div class="about-info">
+          <h2>Sobre mí</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, minus?
             Quaerat error dolor eos laboriosam? At veritatis excepturi numquam vitae?
@@ -64,22 +63,22 @@
     </section>
     <!-- end section about-me -->
     <!-- start section portfolio -->
-    <section>
-      <article">
-        <div>
-          <h2>Lorem, ipsum.</h2>
+    <section id="portfolio">
+      <article class="container">
+        <div class="skills">
+          <h2>Mis Habilidades</h2>
           <ul>
-            <li>Lorem, ipsum.</li>
-            <li>Lorem, ipsum.</li>
-            <li>Lorem, ipsum.</li>
-            <li>Lorem, ipsum.</li>
-            <li>Lorem, ipsum.</li>
+            <li>Lorem, ipsum 1.</li>
+            <li>Lorem, ipsum 2.</li>
+            <li>Lorem, ipsum 3.</li>
+            <li>Lorem, ipsum 4.</li>
+            <li>Lorem, ipsum 5.</li>
           </ul>
         </div>
         <hr>
-        <div>
-          <h2>Lorem ipsum dolor sit.</h2>
-          <div>
+        <div class="portfolio-content">
+          <h2>Mis Proyectos</h2>
+          <div class="box">
             <a href="project1.html">
               <figure>
                 <figcaption>Lorem 1</figcaption>
@@ -109,15 +108,14 @@
     <!-- end section portfolio -->
   </main>
   <!-- end main -->
-  <hr>
   <!-- start footer -->
   <footer>
-    <div>
+    <div class="container">
       <p>Copyright © 2022 Lorem ipsum dolor sit.</p>
       <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Linkendin</a></li>
       </ul>
     </div>
   </footer>
