--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <title>Mariano Gonzalez Oettinghaus | Inicio</title>
+  <title>Portafolio | Inicio</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!-- start navbar -->
     <nav>
       <div class="container">
-        <h1 class="logo"><a href="index.html">Victor Olivares</a></h1>
+        <h1 class="logo"><a href="index.html">Mariano Gonzalez Oettinghaus</a></h1>
         <ul>
           <li><a class="active" href="index.html">Portafolio</a></li>
           <li><a href="contact.html">Contacto</a></li>
